# billing-system-backend

./: pyproject.toml
app/: container.py  main.py
app/core/: events.py  settings.py
app/core/enums/: payment.py
app/core/exceptions/: __init__.py  base.py  handler.py  types.py
app/core/schemas/: base.py  generic.py  menu_item.py  order.py  token.py  user.py
app/dependencies/: token.py
app/endpoints/: __init__.py  auth.py  menu_item.py  order.py  user.py
app/infrastructures/database/: engine.py  meta.py
app/infrastructures/models/: __init__.py  base.py  menu_item.py  order.py  user.py
app/infrastructures/repositories/: __init__.py  base.py  menu_item.py  order.py  user.py
app/infrastructures/utils/: hasher.py  qrcode.py  token.py
app/services/: __init__.py  auth.py  menu_item.py  order.py  user.py
