[project]
name = "billing-system-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Abinavv1",email = "abhinavsharma.sh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "authlib (>=1.6.4,<2.0.0)",
    "segno (>=1.6.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
